...
  static const String appVersion = '1.0.0+1';

  // ─── Auth ─────────────────────────────────────────────
  static const String loginGreeting = 'Halo Mahasiswa!';
  static const String loginSubtitleDetail =
      'Masuk dengan NPM kamu untuk melihat jadwal & info perkuliahan.';
  static const String loginButton = 'Masuk Akun';
  static const String loginNpmHint = 'NPM';
  static const String loginPasswordHint = 'Password';
  static const String loginNpmHelper = 'Gunakan NPM aktif kamu';
  static const String loginHelpdesk = 'Butuh bantuan? ';
  static const String loginHelpdeskLink = 'Helpdesk IT';
  static const String loginOfflineBanner =
...
